erDiagram
    settings {
        bigint id PK
        string key UK
        text value
        string data_type "string|integer|boolean|json|text"
        string module "general|auth|assets|maintenance|campaigns|agent|ai|documents|reports|notifications"
        string group
        string description
        text default_value
        boolean is_editable
        boolean is_sensitive
        integer sort_order
        timestamp created_at
        timestamp updated_at
    }

    setting_histories {
        bigint id PK
        bigint setting_id FK
        text old_value
        text new_value
        bigint changed_by FK
        string ip_address
        timestamp changed_at
        timestamp created_at
    }

    settings ||--o{ setting_histories : "historial"
    users ||--o{ setting_histories : "modifica"
